Fixed table header and scrolling table body - Added class hasMessage to flex-table when flash message is visible - Fixed users widget spec

--- a/server/webapp/WEB-INF/rails/webpack/views/global/zindex.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/global/zindex.scss
@@ -27,4 +27,5 @@ $zindex: (
            users-management-filter: 1,
            user-management-header : 4,
            logindesign : -1,
+           user-management-table-header : 1,
          );
